plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
}

archivesBaseName = 'algs4'
group = 'edu.princeton.cs'
version = '1.0.1'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api libs.commons.math3

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation libs.guava
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

jar {
    // Include source files in the JAR
    from sourceSets.main.allSource
}

// To generate sources and javadoc jars, uncomment the following lines
// java{
//     withSourcesJar()
//     withJavadocJar()
// }

tasks.named('jar') {
    manifest {
        attributes('Implementation-Title': archivesBaseName,
                   'Implementation-Version': project.version)
    }
}


// publishing {
//     publications {
//         MyPublication(MavenPublication) {
//             from components.java
//             artifact sourcesJar
//             artifact javadocJar
//             groupId 'edu.princeton.cs'
//                     artifactId 'algs4'
//                     version '1.0.2'
//         }
//     }
// }

// bintray {
//     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
//     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
//     publications = ['MyPublication']
//     publish = true
//     override = false
//     pkg {
//         repo = 'maven'
//         name = 'algs4'
//         userOrg = 'algs4'
//         desc = 'Source Code for Algorithms, 4th Edition'
//         licenses = ['GPL-3.0']
//         vcsUrl = 'https://github.com/kevin-wayne/algs4.git'
//         websiteUrl = 'https://github.com/kevin-wayne/algs4'
//         labels = ['algorithms', 'java', 'Robert Sedgewick', 'Kevin Wayne']
//         publicDownloadNumbers = true
//         githubRepo = 'kevin-wayne/algs4'
//         githubReleaseNotesFile = 'README.md'
//         version {
//             name = '1.0.2'
//             vcsTag = '1.0.2'
//         }
//     }
// }
